--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -30,7 +30,7 @@ services:
     restart: always
     command: ["start-dev", "--import-realm"]
     volumes:
-      - ./config:/opt/keycloak/data/import:ro
+      - ./config/keycloak:/opt/keycloak/data/import:ro
     ports:
       - 10001:8080
     depends_on:
